[package]
name = "mrust"
version = "0.1.0"
authors = ["Mårten Åsberg <marten.asberg@outlook.com>"]
description = "Monads for Rust"
repository = "https://github.com/89netraM/mrust"
readme = "../README.md"
keywords = ["monad"]
license = "MIT"
edition = "2021"

[lib]

[dependencies.mrust_codegen]
version = "0.1.0"
path = "../codegen"
